2006-11-11  Jean-Christophe Baillie  <baillie@gostai.com>

Remote uobjects couldn't be newed anymore because a test was double checking
the object existence, triggering an error of "object already existing".

	fix remote uobject new 
	* src/ucommand.cc: fixed.

2006-11-07  Akim Demaille  <akim.demaille@free.fr>

	urbi/uobject.hh
	* src/ucommand.cc, src/uobject.cc, src/uvalue.cc, src/uvariable.cc,
	* src/uvar.cc, src/userver.cc, src/uobj.cc, src/uvariablename.cc:
	Adjust the path to uobject.hh.
	* src/Makefile.am: Don't ship uobject files, uobject.mk does it.
	Use $(uobject_hh).

2006-11-07  Akim Demaille  <akim.demaille@free.fr>

	install libport
	As discussed with Matthieu.
	* Makefile.am: Include libport.mk.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Upgrade dependencies
	* src/console.cc: Include config.h.
	* configure.ac (URBI_BUILD_AUX): Use it.
	Use nostdinc.
	* src/Makefile.am (AM_CPPFLAGS): Adjust.
	(uobj-help, uobj-ci, uobj-up): Remove, now in uobject.mk.

2006-11-07  Matthieu Nottale  <nottale@gostai.com>

	Fix ticket #60: Bug in hierarchical tags
	* src/ucommand.cc: Fix incorrect substr use.

2006-11-05  Jean-Christophe Baillie  <baillie@gostai.com>

	fix bug in assignment that fails and put void in the assigned variable.
	* src/ucommand.cc: remove useless comments.
	* src/uexpression.cc: in case of error eval returns 0, not DATA_VOID.

2006-11-05  Jean-Christophe Baillie  <baillie@gostai.com>

	fix typo in one error message.
	* src/ucommand.cc: done.

2006-11-05  Jean-Christophe Baillie  <baillie@gostai.com>

class toto { var x; };
tata = new toto;
at (tata.x) ping;
[00007013:notag] !!! Pure virtual variables not allowed in asynchronous tests.
[00007013:notag] !!! Invalid name resolution in test. Did you define all events and variables?

=> tata.x must exist for 'at' to be able to put a hook on it for caching
purposes.

	forbid usage of virtual attributes in asynchronous test expressions
	* src/uexpression.cc: done.
